Adição de hora e data em projeto_TodoList_Angular

--- a/todo-list/src/app/components/home/home.component.html
+++ b/todo-list/src/app/components/home/home.component.html
@@ -1,9 +1,6 @@
 <app-header></app-header>
 <div>
-  <input
-    [formControl]="taskTitle"
-    id="task-title"
-    placeholder="Título da tarefa"
+  <input [formControl]="taskTitle" id="task-title" placeholder="Título da tarefa"
   />
   <input
     [formControl]="taskDetails"
