Adição de hora e data em projeto_TodoList_Angular

--- a/projeto_TodoList_Angular/src/app/app.component.html
+++ b/projeto_TodoList_Angular/src/app/app.component.html
@@ -1,14 +1,5 @@
 <header>
-  <div class="d-flex flex-column justify-content-center">
-    <h6>Hora</h6>
-    <h6>Data</h6>
-  </div>
-  <h1 class="text-center">Todo List</h1>
-  <h6 class="text-center mb-2">
-    <span class="placeholder col-1 bg-secondary"></span>
-    Organize seu dia!
-    <span class="placeholder col-1 bg-secondary"></span>
-  </h6>
+  <app-header></app-header>  
 </header>
 
 <main>
@@ -16,7 +7,5 @@
 </main>
 
 <footer class="text-center text-secondary">
-  <span class="placeholder col-2 bg-secondary"></span>
-  desenvolvido por SquadTwo
-  <span class="placeholder col-2 bg-secondary"></span>
+  <app-footer></app-footer>  
 </footer>
