Falta finalizar a estilização: mudar cores, verificar como setar favicon no head, alinhar form. Bootstrap instalado.

--- a/todo-list/src/app/components/footer/footer.component.html
+++ b/todo-list/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="pt-5 bg-dark text-white text-center text-secondary">
+<footer class="text-center text-secondary">
   <span class="placeholder col-2 bg-secondary"></span>
   develop by SquadTwo
   <span class="placeholder col-2 bg-secondary"></span>
