--- a/todo-list/src/app/components/header/header.component.html
+++ b/todo-list/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
-<header class="pt-5 bg-dark text-white">
+<title>{{ title }}</title>
+<header>
   <h1 class="text-center">Todo List</h1>
   <h6 class="text-center mb-5">
     <span class="placeholder col-1 bg-secondary"></span>
