fix: refatorando estrutura do footer

--- a/todo-list/src/app/components/footer/footer.component.html
+++ b/todo-list/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="text-center text-secondary">
-  <span class="placeholder col-2 bg-secondary"></span>
-  develop by SquadTwo
-  <span class="placeholder col-2 bg-secondary"></span>
+  <span class="placeholder col-2 bg-danger"></span>
+  <span class="mx-1 text-warning">develop by SquadRasta</span>
+  <span class="placeholder col-2 bg-success"></span>
 </footer>
