fix: ajustando estrutura do html

--- a/todo-list/src/app/components/home/home.component.html
+++ b/todo-list/src/app/components/home/home.component.html
@@ -1,26 +1,40 @@
-<section class="pt-5 bg-dark text-white">
-  <app-header></app-header>
-  <div class="text-center">
-    <input
-    [formControl]="taskTitle"
-    id="task-title"
-    placeholder="Tarefa"
-    />
-    <input
-    class="mx-1"
-    [formControl]="taskDetails"
-    id="task-details"
-    placeholder="Detalhes"
-    />
-    <button (click)="addTask()" id="btn-store">Adicionar tarefa</button>
+<section class="container d-flex flex-column justify-content-center w-75">
+  <div>
+    <app-header></app-header>
+    <div class="d-flex flex-column align-items-center border-warning border-2 m-4">
+      <div>
+        <input
+        class="bg-black"
+        [formControl]="taskTitle"
+        id="task-title"
+        placeholder="Tarefa"
+        />
+      </div>
+      <div>
+        <input
+        class="my-2 bg-black"
+        [formControl]="taskDetails"
+        id="task-details"
+        placeholder="Detalhes"
+        />
+      </div>
+      <div class="d-flex justify-content-between">
+        <!-- <button (click)="clearTask()" id="btn-clear" class="bg-danger text-white p-1 m-1">Limpar</button> -->
+        <button (click)="addTask()" id="btn-store" class="bg-success text-white p-1 m-1">Adicionar</button>
+      </div>
+    </div>
+    <div class="d-flex flex-column align-items-center my-3 text-center">
+      <div *ngFor="let task of tasks" id="task-list" class="border border-white rounded-2 p-3 m-1 box container-sm">
+        <h3 [class.text-success]="task.done" class="p-2">{{ task.title }}</h3>
+        <p [class.text-success]="task.done" class="p-2">{{ task.details }}</p>      
+        <div>
+          <button *ngIf="!task.done" class="bg-danger p-1" (click)="removeTask(task)">Remover</button>
+          <button *ngIf="!task.done" class="bg-warning mx-1 p-1" (click)="editTask(task)">Editar</button>
+          <label class="bg-success p-1 text-black">Feito</label>
+          <input type="checkbox" class="m-1" (change)="toggleDone(task)" [checked]="task.done" />
+        </div>
+      </div>
+    </div>
+    <app-footer></app-footer>
   </div>
-  <div *ngFor="let task of tasks" id="task-list">
-    <h3 [class.text-success]="task.done">{{ task.title }}</h3>
-    <p [class.text-success]="task.done">{{ task.details }}</p>                         
-    <button *ngIf="!task.done" (click)="editTask(task)">Editar</button>
-    <button *ngIf="!task.done" (click)="removeTask(task)">Remover</button>
-    <label>Feito</label>
-    <input type="checkbox" (change)="toggleDone(task)" [checked]="task.done" />
-  </div>
-  <app-footer></app-footer>
 </section>
